# ch347-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: common.rs  dev.rs  gpio.rs  iic.rs  jtag.rs  lib.rs  spi.rs  uart.rs
