[package]
name = "ch347-rs"
version = "0.1.0"
authors = ["Peter <peter@boringhex.top>"]
edition = "2021"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin_sleep = "1.3"

[build-dependencies]
shadow-rs = "0.36"
